# sparkconfgenerator

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yaml  tests.yml
src/sparkconfgenerator/: __init__.py  cli.py  generator.py
src/sparkconfgenerator/models/: __init__.py  models.py  protocols.py
src/sparkconfgenerator/utils/: __init__.py  utils.py
tests/: test_generator.py
