[tool.poetry]
name = "sparkconfgenerator"
version = "0.0.1"
description = ""
authors = ["Stelios Voutsinas <stv@roe.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
