[project]
name = sparkconfgenerator
version = attr: sparkconfgenerator.__version__.__version__
author = Stelios Voutsinas
author_email = stv@roe.ac.uk
description = Generate the Spark configuration for a Spark Cluster
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stvoutsin/sparkconfgenerator
license = GNU
classifiers =
  Development Status :: 3 - Alpha
  License :: OSI Approved :: GNU License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Spark
  Topic :: Utilities

[options]
python_requires = >=3.8.0
package_dir =
  = src
packages = find:

[options.extras_require]
test =
  mypy
  black
  ruff
  pytest

build =
  wheel
  twine
  beautifulsoup4

[options.packages.find]
where = src
